# sms-terminal

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: cargo-release.yml  release.yml
src/: app.rs  error.rs  main.rs  modals.rs  theme.rs  types.rs
src/ui/: dialog.rs  error.rs  messages_table.rs  mod.rs  modals.rs  notification.rs  notifications.rs  phone_input.rs  sms_input.rs
src/ui/modals/: confirmation.rs  delivery_reports.rs  loading.rs  mod.rs  text_input.rs
src/ui/views/: compose.rs  device_info.rs  error.rs  main_menu.rs  messages.rs  mod.rs  phonebook.rs
