[package]
name = "sms-terminal"
version = "0.7.5"
description = "SMS message viewer terminal"
authors = ["morgverd <morgverd@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
sms-client = { version = "1.3.1", git = "https://github.com/morgverd/sms-client.git", features = ["websocket"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
unicode-width = "0.2"
chrono = "0.4.42"
textwrap = "0.16.2"
clap = { version = "4.5.47", features = ["derive"] }
ansi-escape-sequences = "0.1.0"
unicode-general-category = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
rand = "0.9.2"
