[package]
name = "sms-terminal"
version = "0.8.5"
description = "SMS-API interface terminal"
authors = ["morgverd <morgverd@gmail.com>"]
license = "AGPL-3.0-only"
edition = "2024"

[features]
default = []
sentry = ["dep:sentry", "dep:sentry-panic"]

[dependencies]
sms-client = { version = "1.4.1", features = ["websocket"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
unicode-width = "0.2"
chrono = "0.4.42"
textwrap = "0.16.2"
clap = { version = "4.5.47", features = ["derive"] }
ansi-escape-sequences = "0.1.0"
unicode-general-category = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

# Optional Sentry feature.
sentry = { version = "0.42.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls", "release-health", "tower-axum-matched-path"], optional = true }
sentry-panic = { version = "0.42.0", optional = true }

[build-dependencies]
embed-resource = "3.0.5"