[package]
name = "sms-terminal"
version = "2.1.0"
description = "TUI for SMS-API - send/receive SMS, view message history, and control GSM modems from your terminal."
authors = ["morgverd <morgverd@gmail.com>"]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/morgverd/sms-terminal"
keywords = ["sms", "tui", "terminal", "gsm", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "sms-terminal"
path = "src/main.rs"

[features]
default = []
sentry = ["dep:sentry", "dep:sentry-panic"]

[dependencies]
sms-client = { version = "2.0.0", features = ["http-tls-rustls", "websocket-tls-rustls"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
unicode-width = "0.2"
chrono = "0.4.42"
textwrap = "0.16.2"
clap = { version = "4.5.50", features = ["derive"] }
ansi-escape-sequences = "0.1.0"
unicode-general-category = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

# Optional Sentry feature.
sentry = { version = "0.45.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls", "release-health", "tower-axum-matched-path"], optional = true }
sentry-panic = { version = "0.45.0", optional = true }

[build-dependencies]
embed-resource = "3.0.6"